--- a/style.css
+++ b/style.css
@@ -15,6 +15,15 @@ html, body {background: #f3f3f3; font-family: 'Lato', helvetica, arial, sans-ser
 
 .clear {clear: both;}
 
+a {
+	text-decoration: none;
+	color: #cf9a50;
+}
+
+a:visited {
+	color: #cf9a50;
+}
+
 p {
 	font-size: 1em;
 	line-height: 1.4em;
