--- a/style.css
+++ b/style.css
@@ -11,17 +11,17 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section {
 display:block;
 }
 
-html, body {background: #f3f3f3; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222;}
+html, body {background: #fafafa; font-family: 'Lato', helvetica, arial, sans-serif; font-size: 16px; color: #222;}
 
 .clear {clear: both;}
 
 a {
 	text-decoration: none;
-	color: #cf9a50;
+	color: #e08d07;
 }
 
 a:visited {
-	color: #cf9a50;
+	color: #e08d07;
 }
 
 li {
@@ -38,7 +38,7 @@ p {
 #cv {
 	width: 90%;
 	max-width: 800px;
-	background: #f3f3f3;
+	background: #fafafa;
 	margin: 30px auto;
 }
 
@@ -48,8 +48,8 @@ p {
 
 .mainDetails {
 	padding: 25px 35px;
-	border-bottom: 2px solid #cf8a05;
-	background: #f3f3f3;
+	border-bottom: 2px solid #e08d07;
+	background: #fafafa;
 }
 
 #name h1 {
@@ -83,11 +83,13 @@ p {
 }
 
 #name {
-	float: left;
+	float: right;
+	width: 72.5%;
 }
 
 #contactDetails {
 	float: right;
+	width: 72.5%;
 }
 
 #contactDetails ul {
@@ -112,7 +114,7 @@ p {
 }
 
 #contactDetails ul li a:hover { 
-	color: #cf8a05;
+	color: #e08d07;
 }
 
 
@@ -143,7 +145,7 @@ section:last-child {
 	font-family: 'Rokkitt', Helvetica, Arial, sans-serif;
 	font-style: italic;
 	font-size: 1.5em;
-	color: #cf8a05;
+	color: #e08d07;
 }
 
 .sectionContent h2 {
@@ -155,7 +157,7 @@ section:last-child {
 .subDetails {
 	font-size: 0.8em;
 	font-style: italic;
-	margin-bottom: 3px;
+	margin-bottom: 15px;
 }
 
 .keySkills {
